[gd_scene load_steps=8 format=2]

[ext_resource path="res://titleScreen/tittlescreen.png" type="Texture" id=1]
[ext_resource path="res://fonts/DSCaslonGotisch.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://titleScreen/titleScreen.gd" type="Script" id=3]
[ext_resource path="res://titleScreen/Options/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://titleScreen/FearfulHarmonytry2.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[node name="TitleScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.749207
margin_top = 0.749146
margin_right = 0.749207
margin_bottom = 0.749146
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 159.127, 119.131 )
scale = Vector2( 1.0009, 1.00109 )
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 72.0
margin_top = 41.0
margin_right = 247.0
margin_bottom = 199.0
custom_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 175.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 8.0
margin_right = 167.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 4 )
text = "Fheohs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 175.0
margin_bottom = 158.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 175.0
margin_bottom = 92.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 175.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 175.0
margin_bottom = 28.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 15.0
margin_bottom = 28.0
rect_min_size = Vector2( 15, 0 )
custom_fonts/font = SubResource( 5 )
text = "\\"

[node name="Option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 19.0
margin_right = 157.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "New Game"

[node name="Selector2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 175.0
margin_bottom = 28.0
rect_min_size = Vector2( 14, 0 )
custom_fonts/font = SubResource( 5 )
text = "\\"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 32.0
margin_right = 175.0
margin_bottom = 60.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_left = 19.0
margin_right = 156.0
margin_bottom = 28.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 15.0
margin_bottom = 28.0
rect_min_size = Vector2( 15, 0 )
custom_fonts/font = SubResource( 5 )
text = "\\"

[node name="Option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 19.0
margin_right = 119.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "Options"

[node name="Selector2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 123.0
margin_right = 137.0
margin_bottom = 28.0
rect_min_size = Vector2( 14, 0 )
custom_fonts/font = SubResource( 5 )
text = "\\"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 64.0
margin_right = 175.0
margin_bottom = 92.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 49.0
margin_right = 125.0
margin_bottom = 28.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 15.0
margin_bottom = 28.0
rect_min_size = Vector2( 15, 0 )
custom_fonts/font = SubResource( 5 )
text = "\\"

[node name="Option" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 19.0
margin_right = 58.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "exit"

[node name="Selector2" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 62.0
margin_right = 76.0
margin_bottom = 28.0
rect_min_size = Vector2( 14, 0 )
custom_fonts/font = SubResource( 5 )
text = "\\"

[node name="Options" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 240.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
